[tool.poetry]
name = "setup-cdf-toolkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "setup_cdf_toolkit"}]

[tool.poetry.dependencies]
python = "^3.11"
cognite-toolkit = "0.5.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
